--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
 body {
-    color: rgb(26, 24, 24);
-    background: rgb(231, 165, 31);
+    color: white;
+    background: black;
+    margin: 0px;
+}
+
+header {
+    border-bottom: solid 2px rgb(42, 122, 228);
+    padding: 20px;
+    font-size: 32px;
+    color: rgb(42, 122, 228);
 }
