--- a/style.css
+++ b/style.css
@@ -45,12 +45,12 @@ p {
     margin-top: 50px;
 }
 
-.categoria-videos img {
+.categoria-videos  {
     opacity: 0.5;
     height: 200px;
 }
 
-.categoria-videos img:hover {
+.categoria-videos  {
     opacity: 1.0;
     border: 3px solid green;
 }
